# olist-growth-retention

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  data_loader.py  main.py  schemas.py
api/data/: category_performance.parquet  customer_clusters.parquet  customer_cohorts.parquet  customer_rfm.parquet  monthly_revenue.parquet  revenue_by_state.parquet
dbt/olist_warehouse/: dbt_project.yml  profiles.example.yml
dbt/olist_warehouse/models/marts/: _marts__models.yml
dbt/olist_warehouse/models/marts/analytics/: category_performance.sql  customer_cohorts.sql  customer_rfm.sql  monthly_revenue.sql  revenue_by_state.sql
dbt/olist_warehouse/models/marts/core/: dim_customers.sql  dim_products.sql  fct_orders.sql
dbt/olist_warehouse/models/staging/: _src_olist.yml  _stg_olist__models.yml  stg_olist__customers.sql  stg_olist__geolocation.sql  stg_olist__order_items.sql  stg_olist__order_payments.sql  stg_olist__order_reviews.sql  stg_olist__orders.sql  stg_olist__product_category_translation.sql  stg_olist__products.sql  stg_olist__sellers.sql
models/: repeat_purchase.meta.json  repeat_purchase_boost.pkl  repeat_purchase_logreg.pkl
notebooks/: 01_eda.ipynb  01_eda.py  02_segmentation.ipynb  02_segmentation.py  03_repeat_purchase.ipynb  03_repeat_purchase.py
scripts/: build_serving_data.py  export_marts.py  ingest_olist.py
src/olist/: __init__.py  features.py  io.py  model.py
