[project]
name = "olist-portfolio"
version = "0.1.0"
description = "Olist Brazilian E-Commerce — Growth & Retention Portfolio (DA + DS hybrid)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbt-bigquery>=1.9,<2.0",
    "dbt-duckdb>=1.9,<2.0",
    "duckdb>=1.1",
    "google-cloud-bigquery>=3.25",
    "db-dtypes>=1.3",
    "kaggle>=1.6",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "sqlfluff>=3.2",
    "sqlfluff-templater-dbt>=3.2",
    "pytest>=8.0",
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
]
ml = [
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "shap>=0.46",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["E402", "F401"]

[tool.sqlfluff.core]
dialect = "bigquery"
templater = "dbt"
exclude_rules = ["L034"]
max_line_length = 120

[tool.sqlfluff.indentation]
tab_space_size = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
